cabal-version:      2.4
name:               jumoku
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Liu
maintainer:         mr.picklepinosaur@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable jumoku
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        BTree,
        ZTree,
        Render,
        Cli

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>= 4.15.1.0,
        brick,
        vty
    hs-source-dirs:
        app,
        src
    default-language: Haskell2010
    ghc-options:
        -threaded

